--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@create-figma-plugin/build": "0.0.80",
     "@create-figma-plugin/tsconfig": "0.0.80",
     "@figma/plugin-typings": "^1.16.1",
-    "eslint": "^7.13.0"
+    "eslint": "^7.13.0",
+    "eslint-config-preact": "^1.1.3"
   },
   "scripts": {
     "build": "build-figma-plugin",
