refactor to get event and message in

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,6 @@
   "extends": "@create-figma-plugin/tsconfig",
   "compilerOptions": {
     "typeRoots": ["./node_modules/@types", "./node_modules/@figma"]
-  }
+  },
+  "rootDir": "."
 }
