--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "build": "build-figma-plugin",
     "watch": "build-figma-plugin --watch",
-    "lint": "eslint src/ --cache --fix"
+    "lint": "eslint --cache --fix"
   },
   "figma-plugin": {
     "id": "amp-figma",
