--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@create-figma-plugin/ui": "0.0.80",
     "@create-figma-plugin/utilities": "0.0.80",
+    "axios": "^0.21.0",
     "preact": "^10.5.7"
   },
   "devDependencies": {
